--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ code {
   transition: background-image 0.5s ease;
   background-size: cover;
   background-repeat: no-repeat;
+  object-fit: cover;
 }
 
 .ceoHero {
