--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ code {
 
 
 .swipe-container-parent .swipe-container {
-  transition: background-image 0.8s ease-in-out;
+  transition: background-image 0.8s ease-out;
   background-size: cover;
   background-repeat: no-repeat;
   object-fit: cover;
